--- a/res/layout/album_edit_frag.xml
+++ b/res/layout/album_edit_frag.xml
@@ -4,7 +4,7 @@
     android:id="@+id/content"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/ed__padding_small"
+    android:padding="@dimen/np_padding_small"
     android:orientation="vertical">
 
     <include layout="@layout/include_album_new" />
@@ -22,7 +22,7 @@
 
         <TextView
             android:id="@+id/pick_img"
-            android:padding="@dimen/ed__padding_small"
+            android:padding="@dimen/np_padding_small"
             android:drawableLeft="@drawable/photo"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -32,7 +32,7 @@
 
         <TextView
             android:id="@+id/lbl_num_photos"
-            android:padding="@dimen/ed__padding_small"
+            android:padding="@dimen/np_padding_small"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
