--- a/res/layout/album_new_frag.xml
+++ b/res/layout/album_new_frag.xml
@@ -3,7 +3,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/ed__padding_small"
+    android:padding="@dimen/np_padding_small"
     android:orientation="vertical">
 
     <include layout="@layout/include_album_new" />
