--- a/res/layout/contact_frag.xml
+++ b/res/layout/contact_frag.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/scrollableFrame"
-    android:paddingLeft="@dimen/ed__padding_medium"
-    android:paddingRight="@dimen/ed__padding_medium"
+    android:paddingLeft="@dimen/np_padding_medium"
+    android:paddingRight="@dimen/np_padding_medium"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
