--- a/res/layout/event_frag.xml
+++ b/res/layout/event_frag.xml
@@ -21,7 +21,7 @@
             android:id="@+id/lbl_date_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/ed__textsize_small" />
+            android:textSize="@dimen/np_textsize_small" />
 
         <TextView
             android:id="@+id/lbl_location_frame"
