--- a/res/layout/include_frame_empty_folder.xml
+++ b/res/layout/include_frame_empty_folder.xml
@@ -2,7 +2,7 @@
 
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/frame_retry"
+    android:id="@+id/frame_empty_folder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -13,16 +13,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/no_connection"
+        android:text="@string/empty_folder"
         android:textSize="@dimen/np_textsize_large"
-        android:layout_margin="@dimen/np_padding_small"
-        />
-
-    <Button
-        android:id="@+id/btn_retry"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/retry"
         android:layout_margin="@dimen/np_padding_small"
         />
 </LinearLayout>
