--- a/res/layout/layout_img_caption.xml
+++ b/res/layout/layout_img_caption.xml
@@ -2,14 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/ed__padding_medium">
+    android:padding="@dimen/np_padding_medium">
 
     <TextView
         android:id="@android:id/text1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:drawablePadding="@dimen/ed__padding_medium"
+        android:drawablePadding="@dimen/np_padding_medium"
         android:gravity="center_horizontal"
-        android:textSize="@dimen/ed__textsize_medium" />
+        android:textSize="@dimen/np_textsize_medium" />
 
 </FrameLayout>
