--- a/res/layout/list_item_spinner.xml
+++ b/res/layout/list_item_spinner.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:minHeight="48dp"
     android:orientation="horizontal"
-    android:paddingLeft="@dimen/ed__padding_small"
+    android:paddingLeft="@dimen/np_padding_small"
     tools:context=".home.ui.activity.MainActivity">
 
     <TextView
@@ -15,11 +15,11 @@
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:maxLines="1"
-        android:paddingBottom="@dimen/ed__padding_micro"
-        android:paddingLeft="@dimen/ed__padding_micro"
-        android:paddingTop="@dimen/ed__padding_micro"
+        android:paddingBottom="@dimen/np_padding_micro"
+        android:paddingLeft="@dimen/np_padding_micro"
+        android:paddingTop="@dimen/np_padding_micro"
         android:scrollHorizontally="true"
         android:textAppearance="@android:style/TextAppearance.Holo.Widget.ActionBar.Title"
-        android:textSize="@dimen/ed__textsize_medium" />
+        android:textSize="@dimen/np_textsize_medium" />
 
 </com.nexuspad.common.view.DuplicateParentStateAwareLinearLayout>
