--- a/res/layout/list_item_upload_photo.xml
+++ b/res/layout/list_item_upload_photo.xml
@@ -5,14 +5,14 @@
     android:layout_height="wrap_content"
     android:minHeight="48dp"
     android:orientation="horizontal"
-    android:paddingLeft="@dimen/ed__padding_small"
+    android:paddingLeft="@dimen/np_padding_small"
     tools:context=".home.ui.activity.MainActivity">
 
     <ImageView
         android:id="@android:id/icon"
         android:layout_width="@dimen/photo_grid_width"
         android:layout_height="@dimen/photo_grid_height"
-        android:layout_marginRight="@dimen/ed__padding_micro"
+        android:layout_marginRight="@dimen/np_padding_micro"
         android:scaleType="centerCrop"
         tools:ignore="ContentDescription" />
 
@@ -31,11 +31,11 @@
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:maxLines="1"
-            android:paddingBottom="@dimen/ed__padding_micro"
-            android:paddingLeft="@dimen/ed__padding_small"
-            android:paddingTop="@dimen/ed__padding_micro"
+            android:paddingBottom="@dimen/np_padding_micro"
+            android:paddingLeft="@dimen/np_padding_small"
+            android:paddingTop="@dimen/np_padding_micro"
             android:scrollHorizontally="true"
-            android:textSize="@dimen/ed__textsize_medium" />
+            android:textSize="@dimen/np_textsize_medium" />
 
         <ProgressBar
             android:id="@android:id/progress"
@@ -51,11 +51,11 @@
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:maxLines="1"
-            android:paddingBottom="@dimen/ed__padding_micro"
-            android:paddingLeft="@dimen/ed__padding_small"
-            android:paddingTop="@dimen/ed__padding_micro"
+            android:paddingBottom="@dimen/np_padding_micro"
+            android:paddingLeft="@dimen/np_padding_small"
+            android:paddingTop="@dimen/np_padding_micro"
             android:scrollHorizontally="true"
-            android:textSize="@dimen/ed__textsize_small"
+            android:textSize="@dimen/np_textsize_small"
             android:textColor="@android:color/darker_gray" />
     </LinearLayout>
 
