--- a/res/layout/photo_frag.xml
+++ b/res/layout/photo_frag.xml
@@ -4,7 +4,7 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
-    <com.nexuspad.common.view.EndlessViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
                                            android:id="@+id/view_pager"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent" />
