--- a/res/layout/list_content_sticky.xml
+++ b/res/layout/list_content_sticky.xml
@@ -17,7 +17,7 @@
 
         <view
             class="se.emilsjolander.stickylistheaders.StickyListHeadersListView"
-            android:id="@+id/main_list_view"
+            android:id="@+id/list_view"
             android:listSelector="?android:attr/selectableItemBackground"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
