--- a/res/layout/contact_edit_frag.xml
+++ b/res/layout/contact_edit_frag.xml
@@ -177,7 +177,7 @@
             />
 
         <EditText
-            android:id="@+id/txt_note"
+            android:id="@+id/journal_text"
             style="@style/formMargin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
