--- a/res/layout/dashboard_frag.xml
+++ b/res/layout/dashboard_frag.xml
@@ -11,7 +11,7 @@
         >
 
         <ListView
-            android:id="@+id/main_list_view"
+            android:id="@+id/dashboard_menu_list_view"
             android:listSelector="?android:attr/selectableItemBackground"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
