--- a/res/layout/list_content.xml
+++ b/res/layout/list_content.xml
@@ -16,7 +16,7 @@
         >
 
         <ListView
-            android:id="@+id/main_list_view"
+            android:id="@+id/list_view"
             android:listSelector="?android:attr/selectableItemBackground"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
