--- a/res/layout/doc_frag.xml
+++ b/res/layout/doc_frag.xml
@@ -21,7 +21,7 @@
 
         <TextView
             android:id="@+id/lbl_note"
-            style="@style/BlockTextTextView"
+            style="@style/blockTextTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/doc"
