--- a/res/layout/include_frame_progress.xml
+++ b/res/layout/include_frame_progress.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frame_progress"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:visibility="gone" >
 
     <ProgressBar
         style="?android:attr/progressBarStyleLarge"
