--- a/res/layout/list_content.xml
+++ b/res/layout/list_content.xml
@@ -11,9 +11,7 @@
     <FrameLayout
         android:id="@+id/main_list_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        >
+        android:layout_height="match_parent">
 
         <ListView
             android:id="@+id/list_view"
