--- a/res/layout/contact_edit_frag.xml
+++ b/res/layout/contact_edit_frag.xml
@@ -44,11 +44,11 @@
         </LinearLayout>
     -->
 
-        <TextView
-            style="?android:attr/listSeparatorTextViewStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/folder"/>
+        <!--<TextView-->
+            <!--style="?android:attr/listSeparatorTextViewStyle"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="@string/folder"/>-->
 
         <include layout="@layout/include_folder_selector"/>
 
