--- a/res/layout/list_content_sticky.xml
+++ b/res/layout/list_content_sticky.xml
@@ -8,7 +8,7 @@
     <include layout="@layout/include_frame_retry" />
     <include layout="@layout/include_frame_empty_folder" />
 
-    <FrameLayout
+    <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/main_list_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -26,7 +26,7 @@
             android:paddingRight="@dimen/np_padding_small"
             android:scrollbarStyle="outsideOverlay"
             />
-    </FrameLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <include layout="@layout/include_undo_bar" />
 
