--- a/res/layout-land/album_edit_frag.xml
+++ b/res/layout-land/album_edit_frag.xml
@@ -15,7 +15,7 @@
         android:layout_marginRight="@dimen/np_padding_small"
         android:orientation="vertical">
 
-        <include layout="@layout/include_album_new" />
+        <include layout="@layout/album_new" />
 
         <TextView
             style="?android:attr/listSeparatorTextViewStyle"
@@ -50,7 +50,7 @@
     </LinearLayout>
 
     <include
-        layout="@layout/include_grid_view"
+        layout="@layout/photo_grid_view"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1" />
