--- a/res/layout/album_frag.xml
+++ b/res/layout/album_frag.xml
@@ -5,5 +5,5 @@
 
     <include layout="@layout/include_frame_progress"/>
     <include layout="@layout/include_frame_retry"/>
-    <include layout="@layout/include_grid_view"/>
+    <include layout="@layout/photo_grid_view"/>
 </FrameLayout>
