--- a/res/layout/folder_nav_list_header.xml
+++ b/res/layout/folder_nav_list_header.xml
@@ -5,7 +5,7 @@
 
     <TextView
         android:id="@android:id/text1"
-        style="?android:attr/listSeparatorTextViewStyle"
+        style="@style/listTitleTextView"
         android:background="@android:drawable/list_selector_background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
