--- a/res/layout/list_item_event.xml
+++ b/res/layout/list_item_event.xml
@@ -8,37 +8,18 @@
     android:descendantFocusability="blocksDescendants"> <!-- blocksDescendants so list item is clickable -->
 
     <LinearLayout
-        android:id="@+id/date_frame"
+        android:id="@+id/color_label_frame"
         android:orientation="vertical"
-        android:layout_width="0dp"
+        android:layout_width="8dp"
         android:layout_height="match_parent"
-        android:layout_weight="3"
-        android:layout_margin="@dimen/np_padding_small"
-        android:padding="@dimen/np_padding_small"
         android:background="#777777">
-
-        <TextView
-            android:id="@+id/lbl_day_of_week"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:textColor="@android:color/white" />
-
-        <TextView
-            android:id="@+id/lbl_date"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="center_vertical"
-            android:textColor="@android:color/white" />
     </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="7"
+        android:layout_weight="9"
         android:padding="@dimen/np_padding_small"
         android:gravity="center">
 
@@ -47,8 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:textSize="@dimen/np_textsize_medium"
-            android:textStyle="bold" />
+            android:textSize="@dimen/np_textsize_medium" />
 
         <TextView
             android:id="@+id/lbl_time"
