--- a/res/layout/photos_frag.xml
+++ b/res/layout/photos_frag.xml
@@ -10,7 +10,7 @@
     <include layout="@layout/photo_grid_view" />
 
     <LinearLayout
-        android:id="@+id/quick_return"
+        android:id="@+id/bottom_overlay"
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
         android:orientation="horizontal"
