--- a/res/layout/folder_nav_list_header.xml
+++ b/res/layout/folder_nav_list_header.xml
@@ -6,7 +6,7 @@
     <TextView
         android:id="@android:id/text1"
         style="@style/listTitleTextView"
-        android:background="@android:drawable/list_selector_background"
+        android:background="?android:attr/selectableItemBackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
